--- a/TextileWeb/nbproject/private/private.properties
+++ b/TextileWeb/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Users\\yalci\\Downloads\\glassfish6\\glassfish;C:\\Use
 j2ee.server.middleware=C:/Users/yalci/Downloads/glassfish6
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/IExplorerBrowser
+selected.browser=default
 user.properties.file=C:\\Users\\yalci\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
